--- a/presentation/index.html
+++ b/presentation/index.html
@@ -1,11 +1,8 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
     <title>reveal.js</title>
 
@@ -24,13 +21,7 @@
         <section class="page1" data-background="assets/images/back_main.png">
           <div class="title__wrapper">
             <h1>Презентация</h1>
-            <h1
-              style="
-                font-family: 'Questrial', Sans-serif;
-                color: rgb(182, 255, 182);
-                letter-spacing: 4px;
-              "
-            >
+            <h1 style="font-family: 'Questrial', Sans-serif; color: rgb(182, 255, 182); letter-spacing: 4px">
               RSTeam Games Store
             </h1>
           </div>
@@ -38,12 +29,11 @@
         <section>
           <h2>Влияние совместной работы</h2>
           <ul>
-            <li>Постоянная моральная и мотивационная поддержка.</li>
-            <li>Анализ кода и помощь в исправлении ошибок.</li>
-            <li>Совместный подход к решению проблем.</li>
-            <li>
-              Разделение ответственности для более продуктивной разработки
-              проекта.
+            <li class="fragment highlight-green">Постоянная моральная и мотивационная поддержка.</li>
+            <li class="fragment highlight-green">Анализ кода и помощь в исправлении ошибок.</li>
+            <li class="fragment highlight-green">Совместный подход к решению проблем.</li>
+            <li class="fragment highlight-green">
+              Разделение ответственности для более продуктивной разработки проекта.
             </li>
           </ul>
         </section>
@@ -51,98 +41,78 @@
           <h2>Инновации благодаря командной работе</h2>
         </section>
         <section class="page1">
-          <h2>Использование доски Канбан</h2>
-          <img data-src="kanban.png" height="420" width="200" />
-          <img data-src="ragistration-page.png" height="420" width="200" />
-          <p>
-            Канбан — это метод управления проектами и задачами, который помогает
-            визуализировать рабочий процесс и улучшать его с течением времени.
-          </p>
-          <ul>
-            <li><b>To Do:</b> Задачи, которые запланированы для выполнения.</li>
-            <li>
-              <b>In Progress:</b> Задачи, над которыми в настоящее время
-              работает команда.
-            </li>
-            <li>
-              <b>Wait for Approval:</b> Задачи, которые ожидают Code Review и
-              Approval.
-            </li>
-            <li><b>Done:</b> Завершенные задачи.</li>
-          </ul>
-          <p></p>
-          <h3>Карточки:</h3>
-          <p>
-            Каждая карточка содержит в себе четкое описание поставленной задачи.
-            Ссылка на ТЗ. А так же закрепляется человек который ответственен за
-            выполнение данной задачи.
-          </p>
-          <p></p>
-          <h3>GitHub Projects:</h3>
-          <p>
-            Прямое связывание задач с репозиторием. Возможность автоматизации
-            перемещения задач по доске с использованием GitHub Actions.
-            Интеграция с Pull Requests и Issues.
-          </p>
+          <section data-background="assets/images/kanban.png">
+            <div class="title__wrapper">
+              <h2>Использование доски Канбан</h2>
+              <p>
+                Канбан — это метод управления проектами и задачами, который помогает визуализировать рабочий процесс и
+                улучшать его с течением времени.
+              </p>
+            </div>
+          </section>
+          <section data-background="assets/images/kanban.png">
+            <div class="title__wrapper">
+              <h3>Колонки:</h3>
+              <ul>
+                <li><b>To Do:</b> Задачи, которые запланированы для выполнения.</li>
+                <li><b>In Progress:</b> Задачи, над которыми в настоящее время работает команда.</li>
+                <li><b>Wait for Approval:</b> Задачи, которые ожидают Code Review и Approval.</li>
+                <li><b>Done:</b> Завершенные задачи.</li>
+              </ul>
+            </div>
+          </section>
+          <section data-background="assets/images/kanban.png">
+            <div class="title__wrapper">
+              <h3>Карточки:</h3>
+              <p>
+                Каждая карточка содержит в себе четкое описание поставленной задачи. Ссылка на ТЗ. А так же закрепляется
+                человек который ответственен за выполнение данной задачи.
+              </p>
+              <h3>GitHub Projects:</h3>
+              <p>
+                Прямое связывание задач с репозиторием. Возможность автоматизации перемещения задач по доске с
+                использованием GitHub Actions. Интеграция с Pull Requests и Issues.
+              </p>
+            </div>
+          </section>
+          <section data-background="assets/images/kanban.png"></section>
+          <section data-background="assets/images/kanban2.png"></section>
         </section>
         <section>
-          <h2>Коммуникация внутри команды</h2>
+          <section>
+            <h2>Коммуникация внутри команды</h2>
 
-          <p>Discord — это платформа для голосовой, видео и текстовой связи.</p>
-          <p>
-            Ежедневные Встречи: Обязательные встречи каждый день в 20:00. Цель:
-            Обсудить текущие задачи, прогресс и возникающие препятствия.
-            Продолжительность: 15-30 минут.
-          </p>
-          <p>
-            Встречи по Договоренности и Необходимости: Проводятся по мере
-            возникновения потребности.
-          </p>
-          <h3>Успешный Митинг:</h3>
-          <ul>
-            <li>Регулярное Обновление Статуса разработки.</li>
-            <li>Коллективный просмотр этапа разработки.</li>
-            <li>Совместное кодинг сложных моментов разработки</li>
-          </ul>
-          <img data-src="" height="420" width="200" />
-          <img data-src="" height="420" width="200" />
-          <img data-src="" height="420" width="200" />
-          <img data-src="" height="420" width="200" />
-          <img data-src="" height="420" width="200" />
+            <p>Discord — это платформа для голосовой, видео и текстовой связи.</p>
+            <ul>
+              <li>Ежедневные Встречи: Обязательные встречи каждый день в 20:00.</li>
+              <li>Цель: Обсудить текущие задачи, прогресс и возникающие препятствия.</li>
+              <li>Продолжительность: 15-30 минут.</li>
+            </ul>
+          </section>
+          <section>
+            <h3>Успешный Митинг:</h3>
+            <ul>
+              <li>Регулярное Обновление Статуса разработки.</li>
+              <li>Коллективный просмотр этапа разработки.</li>
+              <li>Совместное кодинг сложных моментов разработки</li>
+            </ul>
+          </section>
         </section>
         <section>
           <h2>Аналитика GitHub</h2>
-          <p>
-            Аналитика GitHub предоставляет ценные данные о вкладе разработчиков
-            и общем состоянии проекта.
-          </p>
+          <p>Аналитика GitHub предоставляет ценные данные о вкладе разработчиков и общем состоянии проекта.</p>
           <ul>
-            <li>
-              <b>Commits :</b> Количество коммитов в репозитории за определенный
-              период времени.
-            </li>
-            <li>
-              <b>Pull Requests (PR):</b> Количество созданных, закрытых и
-              принятых PR.
-            </li>
-            <li>
-              <b>Issues :</b> Количество открытых, закрытых и вновь созданных
-              issues.
-            </li>
-            <li>
-              <b>Contributors:</b> Количество активных контрибьюторов за
-              определенный период.
-            </li>
+            <li><b>Commits :</b> Количество коммитов в репозитории за определенный период времени.</li>
+            <li><b>Pull Requests (PR):</b> Количество созданных, закрытых и принятых PR.</li>
+            <li><b>Issues :</b> Количество открытых, закрытых и вновь созданных issues.</li>
+            <li><b>Contributors:</b> Количество активных контрибьюторов за определенный период.</li>
           </ul>
           <img data-src="" height="420" width="200" />
           <img data-src="" height="420" width="200" />
         </section>
         <section>
           <h2>Пример Pull Request и сопутствующего обзора кода</h2>
-          <p>
-            Процесс создания и проверки Pull Request включает несколько ключевых
-            этапов:
-          </p>
+          <p>Процесс создания и проверки Pull Request включает несколько ключевых этапов:</p>
 
           <ol>
             <li>Создание ветки</li>
@@ -154,8 +124,8 @@
             <li>Слияние веток.</li>
           </ol>
           <p>
-            Этот процесс помогает обеспечить качество кода и его соответствие
-            стандартам проекта, способствуя успешной командной работе.
+            Этот процесс помогает обеспечить качество кода и его соответствие стандартам проекта, способствуя успешной
+            командной работе.
           </p>
           <img data-src="" height="420" width="200" />
           <img data-src="" height="420" width="200" />
@@ -232,10 +202,7 @@
             <li><b>Sass:</b> Стилизация с использованием Sass.</li>
             <li><b>Husky: </b>Настройка git-хуков.</li>
             <li><b>jsdom: </b>Эмуляция браузерной среды для тестирования.</li>
-            <li>
-              <b>React Content Loader: </b>Генерация контент-загрузчиков
-              (Skeletons).
-            </li>
+            <li><b>React Content Loader: </b>Генерация контент-загрузчиков (Skeletons).</li>
           </ul>
         </section>
       </div>
