--- a/presentation/index.html
+++ b/presentation/index.html
@@ -26,16 +26,18 @@
             </h1>
           </div>
         </section>
-        <section>
-          <h2>Влияние совместной работы</h2>
-          <ul>
-            <li class="fragment highlight-green">Постоянная моральная и мотивационная поддержка.</li>
-            <li class="fragment highlight-green">Анализ кода и помощь в исправлении ошибок.</li>
-            <li class="fragment highlight-green">Совместный подход к решению проблем.</li>
-            <li class="fragment highlight-green">
-              Разделение ответственности для более продуктивной разработки проекта.
-            </li>
-          </ul>
+        <section data-background="assets/images/partners.jpg">
+          <div class="title__wrapper">
+            <h2>Влияние совместной работы</h2>
+            <ul>
+              <li class="fragment highlight-green">Постоянная моральная и мотивационная поддержка.</li>
+              <li class="fragment highlight-green">Анализ кода и помощь в исправлении ошибок.</li>
+              <li class="fragment highlight-green">Совместный подход к решению проблем.</li>
+              <li class="fragment highlight-green">
+                Разделение ответственности для более продуктивной разработки проекта.
+              </li>
+            </ul>
+          </div>
         </section>
         <section class="page1">
           <h2>Инновации благодаря командной работе</h2>
@@ -79,36 +81,53 @@
           <section data-background="assets/images/kanban2.png"></section>
         </section>
         <section>
-          <section>
-            <h2>Коммуникация внутри команды</h2>
+          <section data-background="assets/images/discord1.png">
+            <div class="title__wrapper">
+              <h2>Коммуникация внутри команды</h2>
 
-            <p>Discord — это платформа для голосовой, видео и текстовой связи.</p>
-            <ul>
-              <li>Ежедневные Встречи: Обязательные встречи каждый день в 20:00.</li>
-              <li>Цель: Обсудить текущие задачи, прогресс и возникающие препятствия.</li>
-              <li>Продолжительность: 15-30 минут.</li>
-            </ul>
+              <p>Discord — это платформа для голосовой, видео и текстовой связи.</p>
+              <ul>
+                <li>Ежедневные Встречи: Обязательные встречи каждый день в 20:00.</li>
+                <li>Цель: Обсудить текущие задачи, прогресс и возникающие препятствия.</li>
+                <li>Продолжительность: 15-30 минут.</li>
+              </ul>
+            </div>
           </section>
-          <section>
-            <h3>Успешный Митинг:</h3>
-            <ul>
-              <li>Регулярное Обновление Статуса разработки.</li>
-              <li>Коллективный просмотр этапа разработки.</li>
-              <li>Совместное кодинг сложных моментов разработки</li>
-            </ul>
+          <section data-background="assets/images/discord1.png">
+            <div class="title__wrapper">
+              <h3>Успешный Митинг:</h3>
+              <ul>
+                <li>Регулярное Обновление Статуса разработки.</li>
+                <li>Коллективный просмотр этапа разработки.</li>
+                <li>Совместное кодинг сложных моментов разработки</li>
+              </ul>
+            </div>
           </section>
+          <section data-background="assets/images/discord1.png"></section>
+          <section data-background="assets/images/discord2.png"></section>
+          <section data-background="assets/images/discord3.png"></section>
+          <section data-background="assets/images/discord4.png"></section>
+          <section data-background="assets/images/discord5.png"></section>
         </section>
         <section>
-          <h2>Аналитика GitHub</h2>
-          <p>Аналитика GitHub предоставляет ценные данные о вкладе разработчиков и общем состоянии проекта.</p>
-          <ul>
-            <li><b>Commits :</b> Количество коммитов в репозитории за определенный период времени.</li>
-            <li><b>Pull Requests (PR):</b> Количество созданных, закрытых и принятых PR.</li>
-            <li><b>Issues :</b> Количество открытых, закрытых и вновь созданных issues.</li>
-            <li><b>Contributors:</b> Количество активных контрибьюторов за определенный период.</li>
-          </ul>
-          <img data-src="" height="420" width="200" />
-          <img data-src="" height="420" width="200" />
+          <section data-background="assets/images/analytics_back.jpeg">
+            <div style="border: 3px solid darkorange" class="title__wrapper">
+              <h2 style="color: darkorange">Аналитика GitHub</h2>
+              <p>Аналитика GitHub предоставляет ценные данные о вкладе разработчиков и общем состоянии проекта.</p>
+              <ul style="font-size: 34px">
+                <li><b>Commits :</b> Количество коммитов в репозитории за определенный период времени.</li>
+                <li><b>Pull Requests (PR):</b> Количество созданных, закрытых и принятых PR.</li>
+                <li><b>Issues :</b> Количество открытых, закрытых и вновь созданных issues.</li>
+                <li><b>Contributors:</b> Количество активных контрибьюторов за определенный период.</li>
+              </ul>
+            </div>
+          </section>
+          <section>
+            <img src="assets/images/gitProject2.png" alt="" />
+          </section>
+          <section>
+            <img src="assets/images/gitProject1.png" alt="" />
+          </section>
         </section>
         <section>
           <h2>Пример Pull Request и сопутствующего обзора кода</h2>
