--- a/presentation/index.html
+++ b/presentation/index.html
@@ -122,11 +122,15 @@
               </ul>
             </div>
           </section>
-          <section>
-            <img src="assets/images/gitProject2.png" alt="" />
+          <section data-background="assets/images/analytics_back.jpeg">
+            <div style="border: 3px solid darkorange" class="title__wrapper">
+              <img src="assets/images/gitProject2.png" alt="" />
+            </div>
           </section>
-          <section>
-            <img src="assets/images/gitProject1.png" alt="" />
+          <section data-background="assets/images/analytics_back.jpeg">
+            <div style="border: 3px solid darkorange" class="title__wrapper">
+              <img src="assets/images/gitProject1.png" alt="" />
+            </div>
           </section>
         </section>
         <section>
