--- a/presentation/index.html
+++ b/presentation/index.html
@@ -134,26 +134,42 @@
           </section>
         </section>
         <section>
-          <h2>Пример Pull Request и сопутствующего обзора кода</h2>
-          <p>Процесс создания и проверки Pull Request включает несколько ключевых этапов:</p>
-
-          <ol>
-            <li>Создание ветки</li>
-            <li>Решение задачи</li>
-            <li>Обновление и мердж основной ветки</li>
-            <li>Разрешение конфликтов</li>
-            <li>Проведение code review</li>
-            <li>Внесение исправлений</li>
-            <li>Слияние веток.</li>
-          </ol>
-          <p>
-            Этот процесс помогает обеспечить качество кода и его соответствие стандартам проекта, способствуя успешной
-            командной работе.
-          </p>
-          <img data-src="" height="420" width="200" />
-          <img data-src="" height="420" width="200" />
-          <img data-src="" height="420" width="200" />
-          <img data-src="" height="420" width="200" />
+          <section data-background="assets/images/gitPR_back.jpeg">
+            <div style="border: 3px solid darkorange" class="title__wrapper">
+              <h2>Пример Pull Request</h2>
+              <ol>
+                <li>Создание ветки</li>
+                <li>Решение задачи</li>
+                <li>Обновление и мердж основной ветки</li>
+                <li>Разрешение конфликтов</li>
+                <li>Проведение code review</li>
+                <li>Внесение исправлений</li>
+                <li>Слияние веток.</li>
+              </ol>
+            </div>
+          </section>
+          <section data-background="assets/images/gitPR_back.jpeg">
+            <div style="border: 3px solid darkorange" class="title__wrapper">
+              <p>Pull Request</p>
+              <img src="assets/images/PullR.png" alt="PullR.png" />
+            </div>
+          </section>
+          <section data-background="assets/images/gitPR_back.jpeg">
+            <div style="border: 3px solid darkorange" class="title__wrapper">
+              <p>Review Process</p>
+              <img src="assets/images/PullR2.png" alt="PullR.png" />
+            </div>
+          </section>
+          <section data-background="assets/images/gitPR_back.jpeg">
+            <div style="border: 3px solid darkorange; pad: 0" class="title__wrapper">
+              <img style="margin: 0" src="assets/images/PullR3.png" alt="PullR.png" />
+            </div>
+          </section>
+          <section data-background="assets/images/gitPR_back.jpeg">
+            <div style="border: 3px solid darkorange; pad: 0" class="title__wrapper">
+              <img style="margin: 0" src="assets/images/PullR4.png" alt="PullR.png" />
+            </div>
+          </section>
         </section>
         <section data-markdown>
           <h2>Документация README</h2>
