--- a/presentation/index.html
+++ b/presentation/index.html
@@ -30,18 +30,14 @@
           <div class="title__wrapper">
             <h2>Влияние совместной работы</h2>
             <ul>
-              <li class="fragment highlight-green">Постоянная моральная и мотивационная поддержка.</li>
-              <li class="fragment highlight-green">Анализ кода и помощь в исправлении ошибок.</li>
-              <li class="fragment highlight-green">Совместный подход к решению проблем.</li>
-              <li class="fragment highlight-green">
-                Разделение ответственности для более продуктивной разработки проекта.
-              </li>
+              <li>Постоянная моральная и мотивационная поддержка.</li>
+              <li>Анализ кода и помощь в исправлении ошибок.</li>
+              <li>Совместный подход к решению проблем.</li>
+              <li>Разделение ответственности для более продуктивной разработки проекта.</li>
             </ul>
           </div>
         </section>
-        <section class="page1">
-          <h2>Инновации благодаря командной работе</h2>
-        </section>
+
         <section class="page1">
           <section data-background="assets/images/kanban.png">
             <div class="title__wrapper">
@@ -185,6 +181,64 @@
           <section data-background="assets/images/README_back.jpeg">
             <div style="border: 3px solid rgb(0, 200, 255); pad: 0" class="title__wrapper">
               <img style="margin: 0" src="assets/images/readme3.png" alt="PullR.png" />
+            </div>
+          </section>
+        </section>
+
+        <section class="page1">
+          <section data-background="assets/images/ourTeam_back.jpeg">
+            <div
+              style="
+                border: 3px solid rgb(0, 200, 255);
+                pad: 0;
+                max-height: 660px;
+                overflow: hidden;
+                margin-bottom: 10px;
+              "
+              class="title__wrapper"
+            >
+              <h2>Инновации благодаря командной работе</h2>
+            </div>
+            <div
+              style="border: 3px solid rgb(0, 200, 255); pad: 0; max-height: 660px; overflow: hidden"
+              class="title__wrapper"
+            >
+              <img style="margin: 0; transform: translateY(-10px)" src="assets/images/ourTeam.png" alt="PullR.png" />
+            </div>
+          </section>
+          <section data-background="assets/images/ourTeam_back.jpeg">
+            <h2>Ольга</h2>
+          </section>
+          <section data-background="assets/images/ourTeam_back.jpeg">
+            <h2>Александр</h2>
+          </section>
+          <section data-background="assets/images/ourTeam_back.jpeg">
+            <div
+              style="
+                border: 3px solid rgb(0, 200, 255);
+                pad: 0;
+                max-height: 660px;
+                overflow: hidden;
+                margin-bottom: 10px;
+              "
+              class="title__wrapper"
+            >
+              <h3>Сергей</h2>
+              <h4>First <b style="color: red;">C</b>RUD operation</h3>
+            </div>
+            <div
+              style="
+                border: 3px solid rgb(0, 200, 255);
+                pad: 0;
+                max-height: 660px;
+                overflow: hidden;
+                margin-bottom: 10px;
+              "
+              class="title__wrapper"
+            >
+              <video muted controls>
+                <source data-src="assets/video/DB_Video.mp4" type="video/mp4" />
+              </video>
             </div>
           </section>
         </section>
