--- a/presentation/index.html
+++ b/presentation/index.html
@@ -18,6 +18,7 @@
   <body>
     <div class="reveal">
       <div class="slides">
+        <!-- ПРЕЗЕНТАЦИЯ НАЧАЛО -->
         <section class="page1" data-background="assets/images/back_main.png">
           <div class="title__wrapper">
             <h1>Презентация</h1>
@@ -26,6 +27,8 @@
             </h1>
           </div>
         </section>
+
+        <!-- ВЛИЯНИЕ СОВМЕСТНОЙ РАБОТЫ -->
         <section data-background="assets/images/partners.jpg">
           <div class="title__wrapper">
             <h2>Влияние совместной работы</h2>
@@ -38,6 +41,7 @@
           </div>
         </section>
 
+        <!-- ИСПОЛЬЗОВАНИЕ ДОСКИ КАНБАН -->
         <section class="page1">
           <section data-background="assets/images/kanban.png">
             <div class="title__wrapper">
@@ -76,6 +80,8 @@
           <section data-background="assets/images/kanban.png"></section>
           <section data-background="assets/images/kanban2.png"></section>
         </section>
+
+        <!-- КОММУНИКАЦИЯ ВНУТРИ КОМАНДЫ -->
         <section>
           <section data-background="assets/images/discord1.png">
             <div class="title__wrapper">
@@ -105,6 +111,8 @@
           <section data-background="assets/images/discord4.png"></section>
           <section data-background="assets/images/discord5.png"></section>
         </section>
+
+        <!-- АНАЛИТИКА GITHUB -->
         <section>
           <section data-background="assets/images/analytics_back.jpeg">
             <div style="border: 3px solid darkorange" class="title__wrapper">
@@ -129,6 +137,8 @@
             </div>
           </section>
         </section>
+
+        <!-- ПРИМЕР PULL REQUEST -->
         <section>
           <section data-background="assets/images/gitPR_back.jpeg">
             <div style="border: 3px solid darkorange" class="title__wrapper">
@@ -168,6 +178,7 @@
           </section>
         </section>
 
+        <!-- README -->
         <section>
           <section data-background="assets/images/README_back.jpeg">
             <div
@@ -185,6 +196,7 @@
           </section>
         </section>
 
+        <!-- ИННОВАЦИИ БЛАГОДАРЯ КОМАНДНОЙ РАБОТЕ -->
         <section class="page1">
           <section data-background="assets/images/ourTeam_back.jpeg">
             <div
@@ -206,12 +218,18 @@
               <img style="margin: 0; transform: translateY(-10px)" src="assets/images/ourTeam.png" alt="PullR.png" />
             </div>
           </section>
+
+          <!-- ОЛЯ -->
           <section data-background="assets/images/ourTeam_back.jpeg">
             <h2>Ольга</h2>
           </section>
+
+          <!-- САША -->
           <section data-background="assets/images/ourTeam_back.jpeg">
             <h2>Александр</h2>
           </section>
+
+          <!-- СЕРЕЖА -->
           <section data-background="assets/images/ourTeam_back.jpeg">
             <div
               style="
