--- a/presentation/index.html
+++ b/presentation/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
-    <title>reveal.js</title>
+    <title>RSTeam Games Store Presentation</title>
 
     <link rel="stylesheet" href="dist/reset.css" />
     <link rel="stylesheet" href="dist/reveal.css" />
@@ -283,11 +283,6 @@
                 <source data-src="assets/video/DB_Filtering.mp4" type="video/mp4" />
               </video>
             </div>
-          </section>
-
-          <!-- САША -->
-          <section data-background="assets/images/ourTeam_back.jpeg">
-            <h2>Александр</h2>
           </section>
 
           <!-- СЕРЕЖА -->
