--- a/presentation/index.html
+++ b/presentation/index.html
@@ -6,6 +6,8 @@
 
     <title>RSTeam Games Store Presentation</title>
 
+    <link rel="icon" href="favicon.ico">
+
     <link rel="stylesheet" href="dist/reset.css" />
     <link rel="stylesheet" href="dist/reveal.css" />
     <link rel="stylesheet" href="dist/theme/black.css" />
